# pike_modules-public_xapian

./: .hgtags  CHANGES  Makefile.in  PikeExpandDeciderProxy.cc  PikeMatchDeciderProxy.cc  README  TODO  configure.in  util.h  xapian.ccmod  xapian_config.h.in
examples/: add.pike  query.pike  spell.pike
module.pmod.in/: module.pmod
pmar/: METADATA.TXT
