# $Id: configure.in,v 1.2 2007-02-09 20:33:04 hww3 Exp $
AC_INIT(xapian_config.h.in)

AC_MODULE_INIT()
AC_CONFIG_HEADERS(xapian_config.h)

AC_PROG_CXX
AC_LANG(C++)

# PKG_CHECK_MODULES(XML2, libxml-2.0)
# PKG_CHECK_MODULES(XSLT, libxslt)

# CPPFLAGS="${CPPFLAGS} ${XML2_CFLAGS} ${XSLT_CFLAGS}"
# LDFLAGS="${LDFLAGS} ${XML2_LIBS} ${XSLT_LIBS}"

CMOD_LIBS="-lxapian"
CMOD_FLAGS=""


AC_CHECK_HEADERS(xapian.h)
# AC_CHECK_LIB(xml2, xmlCleanupParser) 

# AC_CHECK_FUNCS(xmlNewDocPI) 

AC_SUBST(CMOD_CFLAGS) 
AC_SUBST(CMOD_LIBS)

AC_OUTPUT(Makefile)

